# IsoTalia

./: .coverage  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  main.py  pyproject.toml  setup_dev.sh  test_engine.py
.github/workflows/: ci.yml
.github/workflows/ci.yml</: path
core/: __init__.py  events.py  game_state.py  settings.py
core/entities/: __init__.py  components.py  entity.py  player.py
core/systems/: __init__.py  interaction.py  movement.py
core/world/: __init__.py  terrain.py  tile_map.py
data/: items.json  tiles.json
docs/: DEVELOPMENT.md  MOVEMENT_FIX.md  SYSTEM_FLOW.md
rendering/: __init__.py  isometric.py  pygame_renderer.py  sprite_manager.py
tests/: conftest.py
tests/unit/: test_entities.py  test_events.py  test_game_state.py  test_world.py
